2003-02-16 02:08  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSLayoutManager.m (-rectArrayForGlyphRange:
	withinSelectedGlyphRange:inTextContainer:rectCount:,
	-_insertionPointRectForCharacterIndex:textContainer:,
	-drawGlyphsForGlyphRange:atPoint:): Optimize by using a binary
	instead of linear search for the line frag.

	More cleanups and comments.

2003-02-16 22:37  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSLayoutManager.m: Commenting and cleanups.
	(-glyphIndexForPoint:inTextContainer:fractionOfDistanceThroughGlyph:):
	Handle the case where the point is on a line, but not inside a line
	frag rect, better.

2003-02-16 17:48  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/GSHorizontalTypesetter.h,
	Source/GSHorizontalTypesetter.m: Store the line frags array as
	an ivar instead of allocating and freeing it everytime
	-layoutLineNewParagraph: is called.

2003-02-16 15:51  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSLayoutManager.m: Bring back the old implementation of
	-rulerMarkersForTextView:paragraphStyle:ruler:.

Sun Feb 16 14:54:50 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSSplitView.m ([-mouseDown:]): Corrected offset used in
	delegate calls.  For example, in a splitview with a single
	divider, the offset used was 1, while it should be 0.

2003-02-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMenu.m: Upon creation of bWindow, set its level to
	pop up window level, so right click brings up the menu above
	panels etc.

Sun Feb 16 04:13:46 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSSplitView.m ([-mouseDown:]): Fixed calling delegate
	method to constrain split position.  Patch By Enrico Sersale,
	with changes.

2003-02-16 04:14  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/GSLayoutManager.h, Source/GSLayoutManager.m:
	Add methods for setting and getting the extra line fragment
	information.
